feat: blog , fixed
