# docs/swagger.json
@@ -120,8 +120,20 @@
         "homepage.Blog": {
             "type": "object",
             "properties": {
-                "author_id": {
+                "author_name": {
+                    "type": "string"
+                },
+                "author_profile_url": {
+                    "type": "string"
+                },
+                "blog_created_at": {
+                    "type": "string"
+                },
+                "blog_id": {
                     "type": "integer"
+                },
+                "blog_thumbnail_url": {
+                    "type": "string"
                 },
                 "category": {
                     "type": "array",
@@ -132,19 +144,15 @@
                 "content": {
                     "type": "string"
                 },
-                "created_at": {
+                "description": {
                     "type": "string"
                 },
-                "id": {
+                "read_time": {
                     "type": "integer"
-                },
-                "thumbnail_s3_path": {
-                    "type": "string"
                 },
                 "title": {
                     "type": "string"
-                },
-                "tsv_content": {}
+                }
             }
         },
         "types.ErrResponse": {
